# SLAM-Drone

./: README.md  merge_icp.py  merged_icp.ply  requirements.txt  slam_reconstruction.py
Drone/: CMakeLists.txt  Makefile  README  cmake_install.cmake
Drone/src/: main.cpp  main_older.cpp  main_save.cpp  tello.hpp
output/sparse/: nuage_sparse.ply  nuage_sparse_filtre.ply  trajectoire_drone.ply
output2/sparse/: nuage_sparse.ply  nuage_sparse_filtre.ply  trajectoire_drone.ply
